--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,21 +21,23 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <h2 class="project-tagline" align="center" style="color:navajowhite;"> 
           <sup>1</sup><a href="https://scholar.google.com/citations?user=flvl5YQAAAAJ&hl=en&oi=ao" style="color:navajowhite;">Omkar Thawakar</a> 
-          <sup>1</sup><a href="https://www.linkedin.com/in/ashmal-vayani/" style="color:navajowhite;">Ashmal Vayani</a>
+          <sup>1</sup><a href="https://scholar.google.com/citations?user=K4KF1SwAAAAJ&hl=en&oi=ao" style="color:navajowhite;">Ashmal Vayani</a>
           <sup>1,2</sup><a href="https://scholar.google.com/citations?user=M59O9lkAAAAJ&hl=en&oi=ao" style="color:navajowhite;">Salman Khan</a>
           <sup>1</sup><a href="https://scholar.google.com/citations?user=bZ3YBRcAAAAJ&hl=en" style="color:navajowhite;">Hisham Cholakal</a>
           <sup>1,3</sup><a href="https://scholar.google.com/citations?user=_KlvMVoAAAAJ&hl=en&oi=ao" style="color:navajowhite;">Rao M. Anwer</a> 
           <sup>5</sup><a href="https://scholar.google.com/citations?user=lkWfR08AAAAJ&hl=en&oi=ao" style="color:navajowhite;">Michael Felsberg</a> 
           <sup>1,4</sup><a href="https://scholar.google.com/citations?user=wjBD1dkAAAAJ&hl=en&oi=ao" style="color:navajowhite;">Tim Baldwin</a> 
-          <sup>1</sup><a href="https://scholar.google.com/citations?user=5pKTRxEAAAAJ&hl=en&oi=sra" style="color:navajowhite;">Eric P. Xing</a> 
-          <sup>1,5</sup><a href="https://scholar.google.es/citations?user=zvaeYnUAAAAJ&hl=en" style="color:navajowhite;">Fahad Shahbaz Khan</a> </h2>
+          <sup>1,5</sup><a href="https://scholar.google.com/citations?user=5pKTRxEAAAAJ&hl=en&oi=sra" style="color:navajowhite;">Eric P. Xing</a> 
+          <sup>1,6</sup><a href="https://scholar.google.es/citations?user=zvaeYnUAAAAJ&hl=en" style="color:navajowhite;">Fahad Shahbaz Khan</a> </h2>
       <h2 class="project-tagline" align="center" style="color:navajowhite;">
-  <sup>1</sup>Mohamed Bin Zayed University of AI <sup>2</sup>Austrailian National University  <sup>3</sup> Aalto University <sup>4</sup> The University of Melbourne <sup>5</sup> Linköping University   </h2>
+  <sup>1</sup>Mohamed Bin Zayed University of AI <sup>2</sup>Austrailian National University  <sup>3</sup> Aalto University <sup>4</sup> The University of Melbourne 
+    <sup>5</sup> Carnegie Mellon University <sup>6</sup> Linköping University </h2>
 
       {% if site.github.is_project_page %}
         <a href="https://arxiv.org/pdf/2402.16840.pdf" class="btn">arXiv</a>
        <a href="https://github.com/mbzuai-oryx/MobiLlama" class="btn">Code</a>
         <a href="https://huggingface.co/collections/MBZUAI/mobillama-65dd4182d588c91e8230332e" class="btn">HuggingFace</a>
+        <a href="https://mbzuaiac-my.sharepoint.com/:f:/g/personal/omkar_thawakar_mbzuai_ac_ae/EhRfGdmgFVVNvIRfy1EgLwEBjbk_eg3UmNg_zjz7PMTsmg?e=NBuJo8" class="btn">Mobile Application</a>
 <!--        <a href="https://drive.google.com/file/d/1t0tthvh_-dd1BvcmokEb-3FUIaEE31DD/view" class="btn">Slides</a> -->
       {% endif %}
       {% if site.show_downloads %}
